# Upair_Umi_Rorqual_20260702

./: .gitignore  extended_bler_report.txt  install_upair_umi_sensitivity.sh  make_BLER_3u_eval_results_comprehensive.py  make_BLER_3u_eval_results_comprehensive_v2.py  make_BLER_3u_eval_results_comprehensive_v3.py  make_main_u3_bler_vs_baselines.py  make_main_u3_bler_vs_baselines_v2.py  probe1_bounds.sh  probe2_calibration.py  probe3_doppler.sh  pyproject.toml  requirements-narval.txt  requirements.txt  upair_clean_top_level_sh_minimal.sh  upair_final_u3_setup.sh  upair_portable_env.sh  upair_probe_batch_eval_policy.sh  upair_probe_clean_start.sh.before_stageb_probe_fix  upair_probe_pipeline_ready.sh  upair_report_current_pipeline_bler.sh  upair_submit_7variant_pipeline.sh  upair_submit_lib.sh  upair_variant_pipeline_worker.sh
BLER_3u_eval-results/: README.txt  all_aggregated_results_including_zero.csv  evaluation_audit.txt  evaluation_status_all_expected_points.csv  make_bler_3u_plots.py  missing_or_incomplete_points.csv  publication_bler_table.csv  publication_positive_bler_rows.csv  training_status.csv  zero_bler_points_omitted_from_plots.csv
BLER_3u_eval-results_comprehensive/: README.txt  bler_positive_points.csv  bler_zero_points_omitted.csv  evaluation_coverage.csv  evaluation_results_all.csv  legend_labels.txt  receiver_timing_summary.csv  training_summary.csv  validation_nmse_history.csv
BLER_main_u3_eval-results/: main_u3_bler_plot_data.csv  main_u3_bler_plot_data_nonzero.csv
UMI_training/: probe_stageB_rorqual.sh
configs/: probe3_speed_16p67.yaml  (+4 more)
(+6255 files in other folders)
