
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "upair5g"
version = "0.1.0"
description = "UPAIR-5G: Universal Prompted Axial In-context Receiver for 5G NR PUSCH"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
